Add buttons in navbar

--- a/src/app/domains/shared/components/navbar/navbar.component.html
+++ b/src/app/domains/shared/components/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<section id="nav">
+  <nav>
+    <div>
+        <a>Home</a>
+        <a>Portfolio</a>
+        <a>Resume</a>
+        <a>Contact</a>
+    </div>
+  </nav>
+</section>
