--- a/src/app/domains/shared/components/layout/layout.component.html
+++ b/src/app/domains/shared/components/layout/layout.component.html
@@ -1,5 +1,7 @@
-<div class="container mx-auto ">
-  <app-header />
-  <app-navbar></app-navbar>
-  <router-outlet />
+<div class="container mx-auto">
+  <div class="shadown-sm">
+    <app-header />
+    <app-navbar />
+    <router-outlet />
+  </div>
 </div>
