Update layout and navbar

--- a/src/app/domains/shared/components/navbar/navbar.component.html
+++ b/src/app/domains/shared/components/navbar/navbar.component.html
@@ -1,10 +1,14 @@
-<section id="nav">
-  <nav>
-    <div>
-        <a>Home</a>
-        <a>Portfolio</a>
-        <a>Resume</a>
-        <a>Contact</a>
-    </div>
-  </nav>
-</section>
+<div class="pills-box">
+  <div class="pills-item" tabindex="0">
+    <a>Home</a>
+  </div>
+  <div class="pills-item" tabindex="0">
+    <a>Portfolio</a>
+  </div>
+  <div class="pills-item" tabindex="0">
+    <a>Rersume</a>
+  </div>
+  <div class="pills-item" tabindex="0">
+    <a>Contact</a>
+  </div>
+</div>
