--- a/src/app/domains/shared/components/layout/layout.component.html
+++ b/src/app/domains/shared/components/layout/layout.component.html
@@ -1,7 +1,6 @@
 <div class="container mx-auto">
-  <div class="shadown-sm">
-    <app-header />
-    <app-navbar />
-    <router-outlet />
-  </div>
+  <app-header />
+  <app-navbar />
+  <app-about />
+  <router-outlet />
 </div>
