--- a/src/app/domains/shared/components/navbar/navbar.component.css
+++ b/src/app/domains/shared/components/navbar/navbar.component.css
@@ -1,26 +1,28 @@
-nav {
-  text-align: center;
-  white-space: normal;
-}
-
-nav a {
-  background-color: #007bff;
-  border-radius: 10px;
-  color: #fff;
-  padding: 10px 20px;
-  margin: 5px;
-  text-decoration: none;
-  transition: background-color 0.3s;
-}
-
-nav div {
+.pills-box {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   align-content: center;
+  margin-top: 35px
 }
 
-nav a:hover {
-  background-color: #0056b3;
+.pills-item {
+  color: #794999;
+  border-radius: 16px;
+  cursor: pointer;
+  margin-right: 15px;
+  margin-bottom: 25px;
+  padding: 3px 0;
+  transition: all ease .2s
+}
+
+.pills-item:hover {
+  color: #fff;
+  padding: 3px 8px;
+  background-color: #713499
+}
+
+.pills-item a {
+  font-size: 28px;
 }
