--- a/src/app/domains/shared/components/layout/layout.component.html
+++ b/src/app/domains/shared/components/layout/layout.component.html
@@ -1,6 +1,8 @@
 <div class="container mx-auto">
+
   <app-header />
   <app-navbar />
-  <app-about />
   <router-outlet />
+  <app-footer />
+
 </div>
