--- a/src/app/domains/shared/components/navbar/navbar.component.html
+++ b/src/app/domains/shared/components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <div class="pills-box">
     <div class="pills-item" tabindex="0">
       <a
-        routerLink="/"
-        routerLinkActive="active-link"
+        [routerLink]="'/'"
+        [routerLinkActive]="'active-link'"
         [routerLinkActiveOptions]="{ exact: true }"
         class="block navigation-link"
         aria-current="page"
@@ -11,8 +11,8 @@
     </div>
     <div class="pills-item" tabindex="0">
       <a
-        routerLink="/about"
-        routerLinkActive="active-link"
+        [routerLink]="'/about'"
+        [routerLinkActive]="'active-link'"
         [routerLinkActiveOptions]="{ exact: true }"
         class="block navigation-link"
         aria-current="page"
@@ -20,8 +20,8 @@
     </div>
     <div class="pills-item" tabindex="0">
       <a
-        routerLink="/portfolio"
-        routerLinkActive="active-link"
+        [routerLink]="'/portfolio'"
+        [routerLinkActive]="'active-link'"
         [routerLinkActiveOptions]="{ exact: true }"
         class="block navigation-link"
         aria-current="page"
@@ -29,8 +29,8 @@
     </div>
     <div class="pills-item" tabindex="0">
       <a
-        routerLink="/resume"
-        routerLinkActive="active-link"
+        [routerLink]="'/resume'"
+        [routerLinkActive]="'active-link'"
         [routerLinkActiveOptions]="{ exact: true }"
         class="block navigation-link"
         aria-current="page"
@@ -38,8 +38,8 @@
     </div>
     <div class="pills-item" tabindex="0">
       <a
-        routerLink="/contact"
-        routerLinkActive="active-link"
+        [routerLink]="'/contact'"
+        [routerLinkActive]="'active-link'"
         [routerLinkActiveOptions]="{ exact: true }"
         class="block navigation-link"
         aria-current="page"
