Add home and consig title in pages

--- a/src/app/domains/shared/components/navbar/navbar.component.html
+++ b/src/app/domains/shared/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="pills-box">
     <div class="pills-item" tabindex="0">
       <a
-        [routerLink]="'/'"
+        [routerLink]="'/home'"
         [routerLinkActive]="'active-link'"
         [routerLinkActiveOptions]="{ exact: true }"
         class="block navigation-link"
