Update version. Update home, about and navbar

--- a/src/app/domains/info/pages/home/home.component.html
+++ b/src/app/domains/info/pages/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="container">
+  <div class="row">
+    <!--About Me-->
+    <div class="col-lg shadow border m-1">
+      <div class="tex-center">
+        <app-about />
+      </div>
+    </div>
+    <!--Featured Project-->
+    <div class="col-lg shadow border m-1">
+
+    </div>
+  </div>
+</div>
