Update footer and config class css

--- a/src/app/domains/shared/components/footer/footer.component.html
+++ b/src/app/domains/shared/components/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<footer class="footer">
+  <p>
+    No soy solo un rostro en el código. Soy un jugador de equipo, un solucionador de problemas y un entusiasta de la tecnología.
+  </p>
+  <p>Colaboremos para hacer equipo en el mundo de la tecnología.</p>
+  <h2>
+    <p>
+      <a href="https://linkedin.com/in/ingaamira" target="_blank">IngAamira </a>
+    </p>
+  </h2>
+  <p>&copy; 2023</p>
+</footer>
+
