--- a/src/app/domains/shared/components/navbar/navbar.component.html
+++ b/src/app/domains/shared/components/navbar/navbar.component.html
@@ -1,15 +1,15 @@
 <section>
-  <div class="pills-box">
-    <div class="pills-item" tabindex="0">
+  <div class="nav-box">
+    <div class="nav-item" tabindex="0">
       <a
-        [routerLink]="'/home'"
+        [routerLink]="'/'"
         [routerLinkActive]="'active-link'"
         [routerLinkActiveOptions]="{ exact: true }"
         class="block navigation-link"
         aria-current="page"
       >Home</a>
     </div>
-    <div class="pills-item" tabindex="0">
+    <div class="nav-item" tabindex="0">
       <a
         [routerLink]="'/portfolio'"
         [routerLinkActive]="'active-link'"
@@ -18,7 +18,7 @@
         aria-current="page"
       >Portfolio</a>
     </div>
-    <div class="pills-item" tabindex="0">
+    <div class="nav-item" tabindex="0">
       <a
         [routerLink]="'/resume'"
         [routerLinkActive]="'active-link'"
@@ -27,7 +27,7 @@
         aria-current="page"
       >Resume</a>
     </div>
-    <div class="pills-item" tabindex="0">
+    <div class="nav-item" tabindex="0">
       <a
         [routerLink]="'/contact'"
         [routerLinkActive]="'active-link'"
