--- a/src/app/domains/info/pages/about/about.component.css
+++ b/src/app/domains/info/pages/about/about.component.css
@@ -4,6 +4,7 @@ section {
   padding: 2rem 1rem;
   border: 1px solid #ddd;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 section h2 {
@@ -14,7 +15,7 @@ section h2 {
 }
 
 section p {
-  font-size: 16px;
+  font-size: 20px;
   color: #666;
   line-height: 1.5;
 }
