--- a/src/app/domains/shared/components/header/header.component.css
+++ b/src/app/domains/shared/components/header/header.component.css
@@ -1,16 +1,15 @@
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
-.jumbotron {
+.header {
   padding: 2rem 1rem;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
   color: white;
   display: -4;
   background-image: linear-gradient(
-    135deg,
+    180deg,
     #59A193 0%,
     #6e49fe 50%,
     #4c33b1 100%
@@ -18,10 +17,17 @@ body {
   text-align: center;
 }
 
-.jumbotron h1 {
-  font-size: 36px;
+.header h1 {
+  font-size: 40px;
 }
 
-.jumbotron h2 {
+.header h2 {
   text-transform: capitalize;
+}
+
+.header h3 {
+  font-size: 20px;
+  color: #fff;
+  text-decoration: none;
+  transition: text-decoration 0.3s;
 }
