--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="header">
   <h1>Andres Alfonso Mira Mejia</h1>
   <h3>Data Engineer | Business Intelligence Specialist | BI Developer | Software Developer</h3>
 </div>
