--- a/src/app/domains/shared/components/navbar/navbar.component.css
+++ b/src/app/domains/shared/components/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.pills-box {
+.nav-box {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -7,7 +7,7 @@
   margin-top: 35px;
 }
 
-.pills-item {
+.nav-item {
   margin-right: 15px;
   margin-bottom: 25px;
 }
