Add models. Update portfolio and project-card

--- a/src/app/domains/info/pages/project-card/project-card.component.css
+++ b/src/app/domains/info/pages/project-card/project-card.component.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: blue;
+  --text-color: #333;
+  --background-color: #fff;
+}
+
 .tag{
   padding: 0 20px;
   height: 30px;
@@ -7,5 +13,48 @@
   border-radius: 25px;
   background-color: blue;
   color: white;
-  
+
+}
+
+section {
+  background-color: var(--background-color);
+  padding: 2rem 1rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+section h5 {
+  font-size: 24px;
+  color: var(--text-color);
+  text-align: left;
+  text-transform: uppercase;
+}
+
+section p {
+  font-size: 20px;
+  color: #666;
+  line-height: 1.5;
+}
+
+.card-footer {
+  border-top: 1px solid #ddd;
+  padding: 1rem;
+  text-align: center;
+  margin-top: 10px;
+  background-color: var(--background-color);
+}
+
+.card-footer p {
+  margin: 0;
+}
+
+.card-footer a {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
+
+.card-footer a:hover {
+  color: #ffd700;
+  text-decoration: none;
 }
