--- a/src/app/domains/info/pages/portfolio/portfolio.component.html
+++ b/src/app/domains/info/pages/portfolio/portfolio.component.html
@@ -1,4 +1,15 @@
 <div class="container">
-  <app-project-card />
-  
+
+  <div class="row">
+      <div class="col-lg-4 col-md-6 mb-4" style="max-width: 380px; min-width: 380px;">
+        <app-project-card [project]="project" />
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4" style="max-width: 380px; min-width: 380px;">
+        <app-project-card [project]="project" />
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4" style="max-width: 380px; min-width: 380px;">
+        <app-project-card [project]="project" />
+      </div>
+  </div>
+
 </div>
