--- a/src/app/domains/info/pages/project-card/project-card.component.html
+++ b/src/app/domains/info/pages/project-card/project-card.component.html
@@ -1,14 +1,19 @@
 <div class="card shadow text-center" style="max-width: 350px; min-width: 350px;">
-  <div class="card-body">
-    <h5 class="card-title">Sample Project</h5>
-    <p class="card-text">This is a sample project for demostration </p>
-    <button class="btn btn-primary"> Vie More</button>
-  </div>
 
-  <div class="card-footer">
-    <div class="d-flex flex-wrap justity-content-center">
-      <div class="tag me-2 mb-1">Angular</div>
-      <div class="tag me-2 mb-1">TypeScript</div>
+  <section>
+    <div class="card-body">
+      <h5 class="card-title">{{ project.name }}</h5>
+      <p class="card-text">{{project.summary}}</p>
+      <button class="btn btn-primary">View More</button>
     </div>
-  </div>
+
+    <div class="card-footer">
+      <div class="d-flex flex-wrap justify-content-center">
+        <div *ngFor="let tag of project.tags">
+          <div class="tag me-2 mb-1">{{tag}}</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </div>
