--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,14 +1,12 @@
-<section>
-  <div>
-    <h2>¿Quién soy?</h2>
-    <p>
-      En un mundo donde los datos son el recurso más valioso, tengo la experiencia para diseñar, desarrollar y mantener almacenes de datos sólidos y eficientes. Mi enfoque es la orquestación experta de datos y el uso de tecnologías de vanguardia para impulsar la inteligencia empresarial y la toma de decisiones basadas en datos sólidos.
-    </p>
-    <p>
-      Mi viaje profesional se ha centrado en dominar la gestión de datos, la creación de pipelines de datos y la optimización de bases de datos. He trabajado bajo metodologías ágiles como Scrum y Kanban para garantizar la integridad y disponibilidad de la información.
-    </p>
-    <p>
-      Mi perfil tecnológico abarca desde la gestión estratégica de datos hasta la creación de soluciones de software de calidad en un entorno tecnológico en constante evolución.
-    </p>
-  </div>
-</section>
+<div class="about">
+  <h2>¿Quién soy?</h2>
+  <p>
+    En un mundo donde los datos son el recurso más valioso, tengo la experiencia para diseñar, desarrollar y mantener almacenes de datos sólidos y eficientes. Mi enfoque es la orquestación experta de datos y el uso de tecnologías de vanguardia para impulsar la inteligencia empresarial y la toma de decisiones basadas en datos sólidos.
+  </p>
+  <p>
+    Mi viaje profesional se ha centrado en dominar la gestión de datos, la creación de pipelines de datos y la optimización de bases de datos. He trabajado bajo metodologías ágiles como Scrum y Kanban para garantizar la integridad y disponibilidad de la información.
+  </p>
+  <p>
+    Mi perfil tecnológico abarca desde la gestión estratégica de datos hasta la creación de soluciones de software de calidad en un entorno tecnológico en constante evolución.
+  </p>
+</div>
