--- a/src/app/domains/shared/components/header/header.component.css
+++ b/src/app/domains/shared/components/header/header.component.css
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .header {
   padding: 2rem 1rem;
   padding-bottom: 2rem;
@@ -15,6 +10,7 @@ body {
     #4c33b1 100%
   );
   text-align: center;
+  margin-top: 12px;
 }
 
 .header h1 {
