Update home. Delete about

--- a/src/app/domains/info/pages/home/home.component.html
+++ b/src/app/domains/info/pages/home/home.component.html
@@ -1,18 +1,19 @@
 <div class="container">
+
   <div class="row">
 
     <!--About Me-->
     <div class="col-lg shadow border m-1">
-      <div class="tex-center">
+      <div class="text-center">
         <h2>¿Quién soy?</h2>
         <img src="../../../../../assets/imgs/Perfil.jpg" alt="profile picture" width="256" height="256" class="rounded-circle">
-        <p>
+        <p style="text-align: left; margin-top: 10px;">
           En un mundo donde los datos son el recurso más valioso, tengo la experiencia para diseñar, desarrollar y mantener almacenes de datos sólidos y eficientes. Mi enfoque es la orquestación experta de datos y el uso de tecnologías de vanguardia para impulsar la inteligencia empresarial y la toma de decisiones basadas en datos sólidos.
         </p>
-        <p>
+        <p style="text-align: left; margin-top: 10px;">
           Mi viaje profesional se ha centrado en dominar la gestión de datos, la creación de pipelines de datos y la optimización de bases de datos. He trabajado bajo metodologías ágiles como Scrum y Kanban para garantizar la integridad y disponibilidad de la información.
         </p>
-        <p>
+        <p style="text-align: left; margin-top: 10px;">
           Mi perfil tecnológico abarca desde la gestión estratégica de datos hasta la creación de soluciones de software de calidad en un entorno tecnológico en constante evolución.
         </p>
       </div>
@@ -20,11 +21,12 @@
 
     <!--Featured Project-->
     <div class="col-lg shadow border m-1">
-      <div class="tex-center">
+      <div class="text-center">
         <h2>Featured Project</h2>
         <h4>{{featureProject.name}}</h4>
       </div>
     </div>
 
   </div>
+
 </div>
