--- a/src/app/domains/info/pages/project-card/project-card.component.html
+++ b/src/app/domains/info/pages/project-card/project-card.component.html
@@ -7,8 +7,10 @@
   </div>
 
   <div class="card-footer">
-    <div class="tag-container d-flex flex-wrap justify-content-center">
-      <div *ngFor="let tag of project.tags" class="tag me-2 mb-1" [style.background-color]="tag.color">{{ tag }}</div>
+    <div class="d-flex flex-wrap justify-content-center">
+      <div *ngFor="let tag of project.tags">
+        <div class="tag me-2 mb-1" [style.background-color]="tag.color">{{ tag }}</div>
+      </div>
     </div>
   </div>
 
