--- a/src/app/domains/info/pages/portfolio/portfolio.component.html
+++ b/src/app/domains/info/pages/portfolio/portfolio.component.html
@@ -1,5 +1,69 @@
 <div class="container">
 
+  <div class="mb-2">
+    <div>
+      <button class="btn btn-outline-primary mb-2 me-2" (click)="isCollapsed = !isCollapsed">Filter</button>
+      <button class="btn btn-outline-secondary mb-2 " (click)="ResetFilters()" [hidden]="!filtering">Reset</button>
+    </div>
+
+    <div [collapse]="isCollapsed" [isAnimated]="true">
+      <div class="border mb-2 shadow-sm" style="width: 250px;">
+      <form>
+        <div class="row mx-0">
+          <div class="col">
+            <small><b>Languages:</b></small>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input position-static me-2"
+                  [(ngModel)]="java"
+                  (change)="Filter()"
+                  name="Java">
+                <label class="form-check-label small">Java</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input position-static me-2"
+                  [(ngModel)]="typescript"
+                  (change)="Filter()"
+                  name="Typescript">
+                <label class="form-check-label small">TypeScript</label>
+              </div>
+            </div>
+          </div>
+
+          <!-- Other group languages here -->
+
+          <div class="col">
+            <small><b>Frameworks:</b></small>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input position-static me-2"
+                  [(ngModel)]="spring"
+                  (change)="Filter()"
+                  name="Spring">
+                <label class="form-check-label small">Spring Boot</label>
+              </div>
+            </div>
+
+            <!-- Other group framewors here -->
+
+          </div>
+        </div>
+      </form>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
       <div *ngFor="let project of projects" class="col-lg-4 col-md-6 mb-4" style="max-width: 380px; min-width: 380px;">
         <app-project-card [project]="project" />
