--- a/src/app/domains/info/pages/contact/contact.component.html
+++ b/src/app/domains/info/pages/contact/contact.component.html
@@ -1,1 +1,44 @@
-<p>contact works!</p>
+<div class="container" style="padding-bottom: 12px;">
+  <div class="text-center border mb-5 shadow rounded">
+    <h1>Contact</h1>
+    <p>Feel free to connect with me on any of the fallowing platforms:</p>
+  </div>
+
+  <div class="list-group shadow">
+    <a href="https://linkedin.com/in/ingaamira" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3" >
+      <img src="../../../../../assets/icons/linkedin.png" width="32" height="32" class="rounded-circle flex-shrink-0 me-5">
+      <h3 class="mb-0">LinkedIn</h3>
+    </a>
+
+    <a href="https://github.com/IngAamiraDev" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3" >
+      <img src="../../../../../assets/icons/github.png" width="32" height="32" class="rounded-circle flex-shrink-0 me-5">
+      <h3 class="mb-0">Github</h3>
+    </a>
+
+    <a href="https://twitter.com/Ingaamira" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3" >
+      <img src="../../../../../assets/icons/twitter.png" width="32" height="32" class="rounded-circle flex-shrink-0 me-5">
+      <h3 class="mb-0">X</h3>
+    </a>
+
+    <a href="https://platzi.com/p/IngAamira/" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3" >
+      <img src="../../../../../assets/icons/platzi.png" width="32" height="32" class="rounded-circle flex-shrink-0 me-5">
+      <h3 class="mb-0">Platzi</h3>
+    </a>
+
+    <a href="https://www.udemy.com/user/andres-mira/" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3" >
+      <img src="../../../../../assets/icons/udemy.png" width="32" height="32" class="rounded-circle flex-shrink-0 me-5">
+      <h3 class="mb-0">Udemy</h3>
+    </a>
+
+    <a href="https://ingaamira.github.io/" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3" >
+      <img src="../../../../../assets/icons/web-site.png" width="32" height="32" class="rounded-circle flex-shrink-0 me-5">
+      <h3 class="mb-0">Website</h3>
+    </a>
+
+    <a href="mailto:andres.mira@outlook.com" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3" >
+      <img src="../../../../../assets/icons/e-mail.png" width="32" height="32" class="rounded-circle flex-shrink-0 me-5">
+      <h3 class="mb-0">Email</h3>
+    </a>
+  </div>
+
+</div>
