--- a/src/app/domains/shared/components/footer/footer.component.css
+++ b/src/app/domains/shared/components/footer/footer.component.css
@@ -1,6 +1,5 @@
-.footer {
+.text-center {
   padding: 2rem 1rem;
-  padding-bottom: 1rem;
   color: white;
   display: -4;
   background-image: linear-gradient(
@@ -12,27 +11,9 @@
   text-align: center;
 }
 
-.footer h1 {
-  font-size: 36px;
-}
-
-.footer h2 {
-  text-transform: capitalize;
-}
-
-.footer a {
-  color: #fff;
-  text-decoration: none;
-  transition: text-decoration 0.3s;
-}
-
-.footer p {
+.text-center p {
   font-size: 20px;
   color: #fff;
   text-decoration: none;
   transition: text-decoration 0.3s;
-}
-
-.footer a:hover {
-  text-decoration: underline;
 }
