--- a/src/app/domains/shared/components/footer/footer.component.html
+++ b/src/app/domains/shared/components/footer/footer.component.html
@@ -1,13 +1,43 @@
-<footer class="footer">
-  <p>
-    No soy solo un rostro en el código. Soy un jugador de equipo, un solucionador de problemas y un entusiasta de la tecnología.
-  </p>
-  <p>Colaboremos para hacer equipo en el mundo de la tecnología.</p>
-  <h2>
-    <p>
-      <a href="https://linkedin.com/in/ingaamira" target="_blank">IngAamira </a>
-    </p>
-  </h2>
-  <p>&copy; 2023</p>
+<footer class="text-center">
+
+  <div style="padding-bottom: 10px;">
+    <p>No soy solo un rostro en el código. Soy un jugador de equipo, un solucionador de problemas y un entusiasta de la tecnología.</p>
+    <p>Colaboremos para hacer equipo en el mundo de la tecnología.</p>
+  </div>
+
+  <div style="position: relative; bottom: 5px; right: 10px; padding-bottom: 10px">
+    <a href="https://linkedin.com/in/ingaamira" target="_blank" class="" >
+      <img src="../../../../../assets/icons/linkedin.png" width="24" height="24" class="rounded-circle me-2">
+    </a>
+
+    <a href="https://github.com/IngAamiraDev" target="_blank" class="" >
+      <img src="../../../../../assets/icons/github.png" width="24" height="24" class="rounded-circle me-2">
+    </a>
+
+    <a href="https://twitter.com/Ingaamira" target="_blank" class="" >
+      <img src="../../../../../assets/icons/twitter.png" width="24" height="24" class="rounded-circle me-2">
+    </a>
+
+    <a href="https://platzi.com/p/IngAamira/" target="_blank" class="" >
+      <img src="../../../../../assets/icons/platzi.png" width="24" height="24" class="rounded-circle me-2">
+    </a>
+
+    <a href="https://www.udemy.com/user/andres-mira/" target="_blank" class="" >
+      <img src="../../../../../assets/icons/udemy.png" width="24" height="24" class="rounded-circle me-2">
+    </a>
+
+    <a href="https://ingaamira.github.io/" target="_blank" class="" >
+      <img src="../../../../../assets/icons/web-site.png" width="24" height="24" class="rounded-circle me-2">
+    </a>
+
+    <a href="mailto:andres.mira@outlook.com" target="_blank" class="" >
+      <img src="../../../../../assets/icons/e-mail.png" width="24" height="24" class="rounded-circle me-2">
+    </a>
+  </div>
+
+  <div style="padding-bottom: 10px;">
+    <p> &copy;2023</p>
+  </div>
+
 </footer>
 
