--- a/src/app/domains/info/pages/portfolio/portfolio.component.html
+++ b/src/app/domains/info/pages/portfolio/portfolio.component.html
@@ -10,6 +10,7 @@
       <div class="border mb-2 shadow-sm" style="width: 250px;">
       <form>
         <div class="row mx-0">
+
           <div class="col">
             <small><b>Languages:</b></small>
 
@@ -36,9 +37,23 @@
                 <label class="form-check-label small">TypeScript</label>
               </div>
             </div>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input position-static me-2"
+                  [(ngModel)]="python"
+                  (change)="Filter()"
+                  name="Python">
+                <label class="form-check-label small">Phyton</label>
+              </div>
+            </div>
+
+            <!-- Other languages here -->
+
           </div>
 
-          <!-- Other group languages here -->
 
           <div class="col">
             <small><b>Frameworks:</b></small>
@@ -55,9 +70,56 @@
               </div>
             </div>
 
-            <!-- Other group framewors here -->
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input position-static me-2"
+                  [(ngModel)]="angular"
+                  (change)="Filter()"
+                  name="Angular">
+                <label class="form-check-label small">Angular</label>
+              </div>
+            </div>
+
+            <!-- Other frameworks here -->
 
           </div>
+
+
+          <div class="col">
+            <small><b>Other Skill:</b></small>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input position-static me-2"
+                  [(ngModel)]="html"
+                  (change)="Filter()"
+                  name="Html">
+                <label class="form-check-label small">Html</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input position-static me-2"
+                  [(ngModel)]="css"
+                  (change)="Filter()"
+                  name="css">
+                <label class="form-check-label small">CSS</label>
+              </div>
+            </div>
+
+            <!-- Other Skills here -->
+
+          </div>
+
+        <!-- Other filter groups here -->
+
         </div>
       </form>
       </div>
