--- a/src/app/domains/info/pages/resume/resume.component.html
+++ b/src/app/domains/info/pages/resume/resume.component.html
@@ -32,6 +32,18 @@
             <li>Competencias sólidas en programación orientada a objetos (POO) y familiaridad con conceptos de programación funcional y reactiva.</li>
           </ul>
         </div>
+        <hr>
+        <div style="text-align: left;">
+          <h2 class="mb-0">Analista Desarrollador </h2>
+          <h3 class="text-primary">Grupo Avalon</h3>
+          <h4 class="text-secondary">Date: 06/2022 - 11/2022</h4>
+          <ul>
+            <li>Desarrollo y mantenimiento de aplicaciones en Java para integrar y procesar datos en proyectos de Web Scraping.</li>
+            <li>Desarrollo y mantenimiento de aplicaciones en Java para el diseño, visualización de cuadros de mando y KPIs utilizando HTML, CSS, JavaScript, y Angular.</li>
+            <li>Desarrollo y mantenimiento de aplicaciones en Java para análisis y generación de estadísticas relacionadas con el turismo.</li>
+          </ul>
+        </div>
+
       </accordion-group>
 
       <accordion-group [(isOpen)]="isSectorExperienceOpen">
@@ -73,13 +85,13 @@
         </button>
 
         <div style="text-align: left;">
-          <h2 class="mb-0">Business Intelligence Specialist</h2>
+          <h2 class="mb-0">Especialista en Inteligencia de Negocios</h2>
           <h3 class="text-primary">Católica del Norte Fundación Universitaria</h3>
           <h4 class="text-secondary">Date: 07/2018 - 08/2019</h4>
         </div>
         <hr>
         <div style="text-align: left;">
-          <h2 class="mb-0">Barchelor's of Computer Engineer</h2>
+          <h2 class="mb-0">Ingeniero Informático</h2>
           <h3 class="text-primary">Católica del Norte Fundación Universitaria</h3>
           <h4 class="text-secondary">Date: 12/2014 - 11/2017</h4>
         </div>
@@ -117,10 +129,41 @@
           </div>
 
           <div class="col">
+            <h3>Database:</h3>
+            <ul>
+              <li>PostgreSQL</li>
+              <li>SQL Server</li>
+              <li>ORACLE</li>
+              <li>MYSQL</li>
+            </ul>
+          </div>
+
+          <div class="col">
+            <h3>Cloud Computing:</h3>
+            <ul>
+              <li>Azure</li>
+              <li>AWS</li>
+            </ul>
+          </div>
+
+          <div class="col">
+            <h3>Testing:</h3>
+            <ul>
+              <li>Unit Test</li>
+              <li>Performance Test</li>
+            </ul>
+          </div>
+
+          <div class="col">
             <h3>Other Skills:</h3>
             <ul>
               <li>Source Control via Git</li>
-              <li>MVC Architecture</li>
+              <li>Clean Architecture</li>
+              <li>Clean Code</li>
+              <li>Principles SOLID</li>
+              <li>API Rest</li>
+              <li>Gradle</li>
+              <li>DOM y Browser Engine</li>
               <li>Agile Development</li>
             </ul>
           </div>
@@ -143,8 +186,8 @@
 
         <div style="text-align: left;">
           <ul>
-            <li>Native Spanish</li>
-            <li>Enlglish Level A2/B1</li>
+            <li>Native: Spanish</li>
+            <li>English Level: A2/B1</li>
           </ul>
         </div>
       </accordion-group>
