--- a/src/app/domains/shared/components/header/header.component.css
+++ b/src/app/domains/shared/components/header/header.component.css
@@ -1,3 +1,31 @@
+/* Language Selector */
+.language-selector {
+  width: 70px;
+  height: 25px;
+  margin-top: 0px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.language-selector button {
+  width: 42px;
+  height: 0px;
+  padding: 0;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.language-selector button img {
+  width: 30px;
+}
+
+
+/* Header */
 .header {
   padding: 2rem 1rem;
   padding-bottom: 2rem;
