--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -1,3 +1,12 @@
+<div class="language-selector">
+  <button (click)="changeLanguage('en')">
+    <img src="../../../../../assets/icons/usa.png" alt="English">
+  </button>
+  <button (click)="changeLanguage('es')">
+    <img src="../../../../../assets/icons/spain.png" alt="Spanish">
+  </button>
+</div>
+
 <div class="header">
   <h1>Andres Alfonso Mira Mejia</h1>
   <h3>Data Engineer | Business Intelligence Specialist | BI Developer | Software Developer</h3>
