--- a/src/app/domains/shared/components/header/header.component.css
+++ b/src/app/domains/shared/components/header/header.component.css
@@ -24,19 +24,12 @@
   width: 30px;
 }
 
-
 /* Header */
 .header {
   padding: 2rem 1rem;
   padding-bottom: 2rem;
   color: white;
-  display: -4;
-  background-image: linear-gradient(
-    180deg,
-    #59A193 0%,
-    #6e49fe 50%,
-    #4c33b1 100%
-  );
+  background-image: linear-gradient(180deg, #59A193 0%, #6e49fe 50%, #4c33b1 100%);
   text-align: center;
   margin-top: 12px;
 }
