Update translate in header.html

--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -1,13 +1,14 @@
-<div class="language-selector">
-  <button (click)="changeLanguage('en')">
-    <img src="../../../../../assets/icons/usa.png" alt="English">
-  </button>
-  <button (click)="changeLanguage('es')">
-    <img src="../../../../../assets/icons/spain.png" alt="Spanish">
-  </button>
-</div>
-
 <div class="header">
+
+  <div class="language-selector bottom-right">
+    <button (click)="changeLanguage('en')">
+      <img src="../../../../../assets/icons/usa.png" alt="English">
+    </button>
+    <button (click)="changeLanguage('es')">
+      <img src="../../../../../assets/icons/spain.png" alt="Spanish">
+    </button>
+  </div>
+
   <h1>Andres Alfonso Mira Mejia</h1>
   <h3>Data Engineer | Business Intelligence Specialist | BI Developer | Software Developer</h3>
 </div>
