--- a/src/app/domains/shared/components/header/header.component.css
+++ b/src/app/domains/shared/components/header/header.component.css
@@ -5,6 +5,10 @@
   margin-top: 0px;
   display: flex;
   justify-content: flex-end;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 10px; /* Ajusta según sea necesario */
 }
 
 .language-selector button {
@@ -32,6 +36,7 @@
   background-image: linear-gradient(180deg, #59A193 0%, #6e49fe 50%, #4c33b1 100%);
   text-align: center;
   margin-top: 12px;
+  position: relative;
 }
 
 .header h1 {
