--- a/src/app/domains/info/pages/home/home.component.html
+++ b/src/app/domains/info/pages/home/home.component.html
@@ -4,26 +4,29 @@
 
     <!--About Me-->
     <div class="col-lg shadow border m-1">
+
       <div class="text-center">
-        <h2>¿Quién soy?</h2>
+        <h2>{{ 'ABOUT_ME' | translate }}</h2>
         <img src="../../../../../assets/imgs/home/profile.jpg" alt="profile picture" width="256" height="256" class="rounded-circle">
         <p style="text-align: left; margin-top: 10px;">
-          En un mundo donde los datos son el recurso más valioso, tengo la experiencia para diseñar, desarrollar y mantener almacenes de datos sólidos y eficientes. Mi enfoque es la orquestación experta de datos y el uso de tecnologías de vanguardia para impulsar la inteligencia empresarial y la toma de decisiones basadas en datos sólidos.
+          {{ 'ABOUT_ME_TEXT_1' | translate }}
         </p>
         <p style="text-align: left; margin-top: 10px;">
-          Mi viaje profesional se ha centrado en dominar la gestión de datos, la creación de pipelines de datos y la optimización de bases de datos. He trabajado bajo metodologías ágiles como Scrum y Kanban para garantizar la integridad y disponibilidad de la información.
+          {{ 'ABOUT_ME_TEXT_2' | translate }}
         </p>
         <p style="text-align: left; margin-top: 10px;">
-          Mi perfil tecnológico abarca desde la gestión estratégica de datos hasta la creación de soluciones de software de calidad en un entorno tecnológico en constante evolución.
+          {{ 'ABOUT_ME_TEXT_3' | translate }}
         </p>
       </div>
+
     </div>
 
     <!--Featured Project-->
     <div class="col-lg shadow border m-1">
+
       <div class="text-center">
-        <h2>Featured Project</h2>
-        <h4>{{featureProject.name}}</h4>
+        <h2>{{ 'FEATURED_PROJECT' | translate }}</h2>
+        <h4>{{ featureProject.name }}</h4>
       </div>
 
       <carousel>
@@ -34,8 +37,9 @@
         </div>
       </carousel>
 
-      <p class="mt-2">{{featureProject.summary}}</p>
+      <p class="mt-2">{{ featureProject.summary }}</p>
       <p>Vist the <a [routerLink]="'/portfolio'" aria-current="page" >Portfolio</a> section to learn more!</p>
+
     </div>
 
   </div>
