--- a/src/app/domains/info/pages/resume/resume.component.html
+++ b/src/app/domains/info/pages/resume/resume.component.html
@@ -116,6 +116,7 @@
             <ul>
               <li>Java</li>
               <li>Python</li>
+              <li>JavaScript</li>
               <li>TypeScript</li>
             </ul>
           </div>
@@ -163,6 +164,7 @@
               <li>Principles SOLID</li>
               <li>API Rest</li>
               <li>Gradle</li>
+              <li>Maven</li>
               <li>DOM y Browser Engine</li>
               <li>Agile Development</li>
             </ul>
