--- a/src/app/domains/shared/components/header/header.component.css
+++ b/src/app/domains/shared/components/header/header.component.css
@@ -26,14 +26,20 @@
 
 .language-selector button img {
   width: 30px;
+  border-radius: 50%;
+  transition: transform 0.3s;
+}
+
+.language-selector a:hover img {
+  transform: scale(1.2);
 }
 
 /* Header */
 .header {
+  background-image: linear-gradient(180deg, #59A193 0%, #6e49fe 50%, #4c33b1 100%);
   padding: 2rem 1rem;
   padding-bottom: 2rem;
   color: white;
-  background-image: linear-gradient(180deg, #59A193 0%, #6e49fe 50%, #4c33b1 100%);
   text-align: center;
   margin-top: 12px;
   position: relative;
