--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -2,13 +2,18 @@
 
   <div class="language-selector bottom-right">
     <button (click)="changeLanguage('en')">
-      <img src="../../../../../assets/icons/usa.png" alt="English">
+      <a>
+        <img src="../../../../../assets/icons/usa.png" alt="English">
+      </a>
     </button>
     <button (click)="changeLanguage('es')">
-      <img src="../../../../../assets/icons/spain.png" alt="Spanish">
+      <a>
+        <img src="../../../../../assets/icons/spain.png" alt="Spanish">
+      </a>
     </button>
   </div>
 
   <h1>Andres Alfonso Mira Mejia</h1>
-  <h3>Data Engineer | Business Intelligence Specialist | BI Developer | Software Developer</h3>
+  <h3> {{ 'TITLE' | translate }} </h3>
+
 </div>
